--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,14 @@ dependencies:
   supabase_flutter: ^2.8.0
   google_fonts: ^6.2.1
   flutter_flavorizr: ^2.2.3
+  shadcn_ui: ^0.13.0
+  flutter_svg: ^2.0.10+1
+  get_it: ^8.0.0
+  bloc: ^8.1.4
+  meta: ^1.15.0
+  freezed: ^2.5.7
+  freezed_annotation: ^2.4.4
+  flutter_bloc: ^8.1.6
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +57,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  build_runner: ^2.4.13
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -62,9 +71,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/lottie/
+    - assets/rive/
+    - assets/svg/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -98,7 +109,6 @@ flavorizr:
     prod:
       app:
         name: "Civic Watch"
-
       android:
         applicationId: "dev.romaine.civicwatch"
       ios:
