--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   freezed: ^2.5.7
   freezed_annotation: ^2.4.4
   flutter_bloc: ^8.1.6
+  firebase_core: ^3.6.0
+  google_maps_flutter: ^2.9.0
 
 dev_dependencies:
   flutter_test:
@@ -111,13 +113,21 @@ flavorizr:
         name: "Civic Watch"
       android:
         applicationId: "dev.romaine.civicwatch"
+        firebase:
+          config: "config/prod/google-services.json"
       ios:
-        bundleId: "dev.romaine.civicwatch"       
+        bundleId: "dev.romaine.civicwatch"     
+        firebase:
+          config: "config/prod/GoogleService-Info.plist"  
     dev:
       app:
         name: "Civic Watch Dev"
 
       android:
         applicationId: "dev.romaine.civicwatch.dev"
+        firebase:
+          config: "config/prod/google-services.json"
       ios:
         bundleId: "dev.romaine.civicwatch.dev"
+        firebase:
+          config: "config/dev/GoogleService-Info.plist"
