Refactor Google Maps API key handling

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,7 @@
     <true/>
     <key>UIApplicationSupportsIndirectInputEvents</key>
     <true/>
+    <key>GOOGLE_MAPS_API_KEY</key>
+    <string>AIzaSyCyCPyNmpDHUnUgZlrA6Zsmu0iSbtT1qIg</string>
   </dict>
 </plist>
