--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,10 @@ dependencies:
   flutter_bloc: ^8.1.6
   firebase_core: ^3.6.0
   google_maps_flutter: ^2.9.0
+  go_router: ^14.3.0
+  cached_network_image: ^3.4.1
+  unicons: ^3.0.0
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
