--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,12 @@ dependencies:
   cached_network_image: ^3.4.1
   unicons: ^3.0.0
   shared_preferences: ^2.3.2
+  rive: ^0.13.17
+  loading_animation_widget: ^1.3.0
+  image_picker: ^1.1.2
+  image_grid_layout: ^0.0.1
+  path_provider: ^2.1.5
+  animated_reorderable: ^1.4.2
 
 dev_dependencies:
   flutter_test:
